--- a/src/app/core/components/layout/footer/footer.component.scss
+++ b/src/app/core/components/layout/footer/footer.component.scss
@@ -1,4 +1,5 @@
 .footer {
+  color: #fff;
   background: #060606;
   height: 53px;
   padding: 0 3rem;
@@ -7,7 +8,7 @@
   justify-content: space-between;
   transition: padding 0.2s linear;
 
-  .copy{
+  .copy {
     padding: 1.6rem;
   }
 
@@ -17,6 +18,8 @@
   }
 
   .link-list a {
+    text-decoration: none;
+    color: #c9cacc;
     padding: 1.6rem;
     display: block;
   }
@@ -32,5 +35,11 @@
     .copy {
       order: 2;
     }
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .footer {
+    padding: 0;
   }
 }
