--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,8 +75,7 @@ ul, ol {
 }
 
 a {
-  text-decoration: none;
-  color: #adaeb0;
+  color: #000;
 }
 
 
@@ -200,6 +199,10 @@ Mat Tooltip
 }
 
 @media (prefers-color-scheme: dark) {
+
+  a{
+    color: #fff;
+  }
 
   body, html, .view .view-header {
     color: #e0d4d5;
