--- a/src/app/help/components/how-to-use-guide/how-to-use-guide.component.html
+++ b/src/app/help/components/how-to-use-guide/how-to-use-guide.component.html
@@ -53,9 +53,9 @@
 
 <p>To use a published speadsheet, which is based on the template, you just have to enter the ID in the URL like:
   <br><code>https://koenig.gg/poketrades/1Vv5VjgTBECyq4iTODtok9JEYR8lWRd5L2ekTD5QaC2M</code></p>
-<p>Alternatively you can enter the ID in the <a routerLink="spreadsheet-changer">spreadsheet changer</a> to preview the
+<p>Alternatively you can enter the ID in the <a routerLink="/change-spreadsheet">spreadsheet changer</a> to preview the
   spreadsheet and save it in your history!
-  <br>(The history is only visible on your current device) </p>
+  <br>(The history is only visible on your current device)</p>
 
 <p>You can get your ID from the URL from your spreadsheet.
   <br>Its the part between the two slashes after the <code>spreadsheets/d</code> in your spreadsheet URL.</p>
