added more templates note

--- a/src/app/help/components/how-to-use-guide/how-to-use-guide.component.html
+++ b/src/app/help/components/how-to-use-guide/how-to-use-guide.component.html
@@ -4,6 +4,7 @@
 <p>The link to that spreadsheet template (the "template") and a description how to use it can be found on <a
   href="https://www.reddit.com/r/pokemontrades/comments/jgn8ly/gen_8_collection_template_3_the_return_of_the_king/">reddit.com</a>
 </p>
+<p>More templates might come later.</p>
 
 <h3>Preparing the template</h3>
 <p>Before anything you have to make a copy of the template and save it in your own Google Drive.<br>
