added navigation hint

--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -2,7 +2,8 @@
 <p>This is an early build of this website and has no "real" frontpage at the moment.
 <br>If you want to know how use this tool please visit the <a routerLink="/help">help section</a>.
 <br>If you want to give feedback or report bugs write me a  <a href="https://www.reddit.com/message/compose/?to=KoenigDerLuegner">message on reddit.com</a>
-or visit my <a href="https://github.com/koenigderluegner/poketrades/issues">GitHub issue section</a>.</p>
+or visit my <a href="https://github.com/koenigderluegner/poketrades/issues">GitHub issue section</a>.
+<br>If you're just browsing, then use the navigation at the top right.</p>
 <p>That's all, have fun!</p>
 
 <markdown class="markdown">
