--- a/src/app/grid/detailed/detailed.component.scss
+++ b/src/app/grid/detailed/detailed.component.scss
@@ -180,7 +180,7 @@ $dynamaxColor: #33EAFA,
   padding: 4px 10px;
 }
 
-.detailed-ability {
+.detailed-ability, .detailed-nature {
   display: flex;
 }
 
