--- a/src/app/grid/detailed/detailed.component.scss
+++ b/src/app/grid/detailed/detailed.component.scss
@@ -213,6 +213,27 @@ $dynamaxColor: #33EAFA,
   }
 }
 
+.adamant .atk, .brave .atk, .lonely .atk, .naughty .atk,
+.bold .def, .impish .def, .relaxed .def,
+.modest .spa, .mild .spa, .rash .spa, .quiet .spa,
+.calm .spd, .careful .spd, .sassy .spd,
+.jolly .spe, .timid .spe, .hasty .spe, .naive .spe {
+  color: #ff2222;
+}
+
+.modest .atk, .timid .atk, .calm .atk, .bold .atk,
+.lonely .def, .mild .def, .hasty .def,
+.adamant .spa, .jolly .spa, .impish .spa, .careful .spa,
+.naive .spd, .rash .spd, .naughty .spd,
+.brave .spe, .quiet .spe, .sassy .spe, .relaxed .spe {
+  color: #126ee0;
+}
+
+
+.hp, .atk, .def, .spa, .spd, .spe, .ev, .iv {
+  padding: 4px 0;
+}
+
 
 .detailed-move {
   margin-bottom: 3px;
@@ -273,6 +294,25 @@ $dynamaxColor: #33EAFA,
 
 
 @media (prefers-color-scheme: dark) {
+
+
+  .adamant .atk, .brave .atk, .lonely .atk, .naughty .atk,
+  .bold .def, .impish .def, .relaxed .def,
+  .modest .spa, .mild .spa, .rash .spa, .quiet .spa,
+  .calm .spd, .careful .spd, .sassy .spd,
+  .jolly .spe, .timid .spe, .hasty .spe, .naive .spe {
+    color: #f35b96;
+  }
+
+  .modest .atk, .timid .atk, .calm .atk, .bold .atk,
+  .lonely .def, .mild .def, .hasty .def,
+  .adamant .spa, .jolly .spa, .impish .spa, .careful .spa,
+  .naive .spd, .rash .spd, .naughty .spd,
+  .brave .spe, .quiet .spe, .sassy .spe, .relaxed .spe {
+    color: #45c6f0;
+  }
+
+
   .grid.detailed {
     .grid-item {
       background: #212121;
