--- a/src/app/grid/detailed/detailed.component.scss
+++ b/src/app/grid/detailed/detailed.component.scss
@@ -213,12 +213,17 @@ $dynamaxColor: #33EAFA,
   }
 }
 
+:root {
+  --nature-plus-color: #ff2222;
+  --nature-minus-color: #126ee0;
+}
+
 .adamant .atk, .brave .atk, .lonely .atk, .naughty .atk,
 .bold .def, .impish .def, .relaxed .def,
 .modest .spa, .mild .spa, .rash .spa, .quiet .spa,
 .calm .spd, .careful .spd, .sassy .spd,
 .jolly .spe, .timid .spe, .hasty .spe, .naive .spe {
-  color: #ff2222;
+  color: var(--nature-plus-color);
 }
 
 .modest .atk, .timid .atk, .calm .atk, .bold .atk,
@@ -226,7 +231,7 @@ $dynamaxColor: #33EAFA,
 .adamant .spa, .jolly .spa, .impish .spa, .careful .spa,
 .naive .spd, .rash .spd, .naughty .spd,
 .brave .spe, .quiet .spe, .sassy .spe, .relaxed .spe {
-  color: #126ee0;
+  color: var(--nature-minus-color);
 }
 
 
@@ -295,23 +300,10 @@ $dynamaxColor: #33EAFA,
 
 @media (prefers-color-scheme: dark) {
 
-
-  .adamant .atk, .brave .atk, .lonely .atk, .naughty .atk,
-  .bold .def, .impish .def, .relaxed .def,
-  .modest .spa, .mild .spa, .rash .spa, .quiet .spa,
-  .calm .spd, .careful .spd, .sassy .spd,
-  .jolly .spe, .timid .spe, .hasty .spe, .naive .spe {
-    color: #f35b96;
+  :root {
+    --nature-plus-color: #f35b96;
+    --nature-minus-color: #45c6f0;
   }
-
-  .modest .atk, .timid .atk, .calm .atk, .bold .atk,
-  .lonely .def, .mild .def, .hasty .def,
-  .adamant .spa, .jolly .spa, .impish .spa, .careful .spa,
-  .naive .spd, .rash .spd, .naughty .spd,
-  .brave .spe, .quiet .spe, .sassy .spe, .relaxed .spe {
-    color: #45c6f0;
-  }
-
 
   .grid.detailed {
     .grid-item {
@@ -338,7 +330,6 @@ $dynamaxColor: #33EAFA,
     @each $type, $color in $typesDarkmode {
       .move-#{$type} {
         background-color: $color;
-        background-image: url("type-icons/#{$type}.png");
       }
     }
   }
