added filter by name

--- a/src/app/grid/grid-controller/grid-controller.component.html
+++ b/src/app/grid/grid-controller/grid-controller.component.html
@@ -3,3 +3,4 @@
               [icon]="toggleInactivesControl.value ? 'visibility_off': 'visibility'">
   {{toggleInactivesControl.value ? 'Unowned hidden' : 'Unowned visible'}}
 </app-checkbox>
+<input [formControl]="filter">
