--- a/src/app/grid/grid-controller/grid-controller.component.html
+++ b/src/app/grid/grid-controller/grid-controller.component.html
@@ -2,12 +2,13 @@
              class="m-right-gap"></app-changer>
 <app-checkbox *ngIf="(hideInactives$ | async) === false" [formControl]="toggleInactivesControl"
               (change)="changeGridInactives()"
-              [icon]="toggleInactivesControl.value ? 'visibility_off': 'visibility'">
+              [icon]="toggleInactivesControl.value ? 'visibility_off': 'visibility'"
+class="m-right-gap">
   {{toggleInactivesControl.value ? 'Unowned hidden' : 'Unowned visible'}}
 </app-checkbox>
-<input [formControl]="filter">
-<mat-form-field floatLabel="never">
-  <mat-select [formControl]="sorting" placeholder="select sorting">
+<input [formControl]="filter" class="m-right-gap">
+<mat-form-field floatLabel="never" class="sel m-right-gap" appearance="fill">
+  <mat-select [formControl]="sorting" placeholder="select sorting" panelClass="dark-panel">
     <mat-option>None</mat-option>
     <mat-option [value]="{id: 'name', start: 'asc', disableClear: false}">Name ascending</mat-option>
     <mat-option [value]="{id: 'name', start: 'desc', disableClear: false}">Name descending</mat-option>
