--- a/src/app/grid/normal/normal.component.scss
+++ b/src/app/grid/normal/normal.component.scss
@@ -12,7 +12,7 @@
     margin: 0;
     height: auto;
     display: grid;
-    grid-template-columns: 68px 1fr 68px;
+    grid-template-columns: 68px 1fr 36px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, .4);
     font-family: 'Kulim Park', sans-serif;
 
@@ -32,6 +32,22 @@
       }
     }
 
+  }
+
+  .icon .item-icon {
+    position: absolute;
+    bottom: -10%;
+    left: 50%;
+
+    &.ball{
+      bottom: unset;
+      top: 20%;
+    }
+  }
+
+  .shiny-icon{
+    display: flex;
+    align-items: center;
   }
 }
 
