--- a/src/app/grid/normal/normal.component.html
+++ b/src/app/grid/normal/normal.component.html
@@ -2,8 +2,8 @@
   <img class="icon-foundation" [src]="'assets/images/pokesprite-pokeball.svg'" alt="">
   <div class="icon">
     <app-pokemon [shiny]="!!pokemon?.isShiny" [slug]="pokemon?.iconSlug"></app-pokemon>
-    <app-item [slug]="pokemon.item | slugify" *ngIf="pokemon.item"></app-item>
-    <app-item [slug]="pokemon.ball | slugify" category="ball" *ngIf="pokemon.ball"></app-item>
+    <app-item [slug]="pokemon.item | slugify" *ngIf="pokemon?.item"></app-item>
+    <app-item [slug]="pokemon.ball | slugify" category="ball" *ngIf="pokemon?.ball"></app-item>
   </div>
 </div>
 <div class="information">
@@ -11,5 +11,5 @@
   <div>{{pokemon?.ability}}</div>
 </div>
 <div class="shiny-icon">
-  <mat-icon *ngIf="pokemon.isShiny" svgIcon="shiny-stars"></mat-icon>
+  <mat-icon *ngIf="pokemon?.isShiny" svgIcon="shiny-stars"></mat-icon>
 </div>
