--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
@@ -6,20 +7,20 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$poketrades-primary: mat-palette($mat-indigo);
-$poketrades-accent: mat-palette($mat-pink, A200, A100, A400);
+$poketrades-primary: mat.define-palette(mat.$indigo-palette);
+$poketrades-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$poketrades-warn: mat-palette($mat-red);
+$poketrades-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$poketrades-theme: mat-light-theme((
+$poketrades-theme: mat.define-light-theme((
   color: (
     primary: $poketrades-primary,
     accent: $poketrades-accent,
@@ -30,7 +31,7 @@ $poketrades-theme: mat-light-theme((
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($poketrades-theme);
+@include mat.all-component-themes($poketrades-theme);
 
 @import "~pokesprite-spritesheet/assets/pokesprite-pokemon-gen8.css";
 @import "~pokesprite-spritesheet/assets/pokesprite-inventory.css";
