--- a/src/app/grid/minimal/minimal.component.scss
+++ b/src/app/grid/minimal/minimal.component.scss
@@ -14,11 +14,18 @@
     }
 
     .icon {
+      position: relative;
       width: 68px;
       height: 56px;
       margin-left: -14px;
       flex-basis: 40px;
       margin-top: -16px;
+
+      .item-icon {
+        position: absolute;
+        bottom: -10%;
+        left: 50%;
+      }
     }
   }
 }
