added starters and pseudo-legendaries to categories

--- a/src/app/grid/grid-controller/grid-controller.component.html
+++ b/src/app/grid/grid-controller/grid-controller.component.html
@@ -45,6 +45,8 @@
       <mat-option [value]="pokemonCategory.ALCREMIE">Alcremie</mat-option>
     </mat-optgroup>
     <mat-optgroup label="Other">
+      <mat-option [value]="pokemonCategory.STARTER">Starter</mat-option>
+      <mat-option [value]="pokemonCategory.PSEUDO_LEGENDARY">Pseudo-Legendary</mat-option>
       <mat-option [value]="pokemonCategory.FOSSIL">Fossil</mat-option>
       <mat-option [value]="pokemonCategory.BABY">Baby</mat-option>
       <mat-option [value]="pokemonCategory.GIGANTAMAX">Gigantamax</mat-option>
