--- a/src/app/grid/grid-controller/grid-controller.component.html
+++ b/src/app/grid/grid-controller/grid-controller.component.html
@@ -1,11 +1,14 @@
 <app-changer *ngIf="(hideAppearance$ | async)  === false" (selectionChanged)="changeGrid($event)"
              class="m-right-gap"></app-changer>
-<app-checkbox *ngIf="(hideInactives$ | async) === false" [formControl]="toggleInactivesControl"
-              (change)="changeGridInactives()"
-              [icon]="toggleInactivesControl.value ? 'visibility_off': 'visibility'"
-              class="m-right-gap">
-  {{toggleInactivesControl.value ? 'Unowned hidden' : 'Unowned visible'}}
-</app-checkbox>
+
+<mat-form-field floatLabel="never" class="sel m-right-gap" appearance="fill"
+                *ngIf="(hideOwnedStatusControl$ | async) === false">
+  <mat-select multiple [formControl]="ownedStatusControl" placeholder="select owned status" panelClass="dark-panel">
+    <mat-option [value]="'owned'">Owned</mat-option>
+    <mat-option [value]="'unowned'">Unowned</mat-option>
+  </mat-select>
+</mat-form-field>
+
 <input [formControl]="filter" class="m-right-gap grid-filter placeholder-light" placeholder="filter by name">
 <mat-form-field floatLabel="never" class="sel m-right-gap" appearance="fill">
   <mat-select [formControl]="sorting" placeholder="select sorting" panelClass="dark-panel">
