--- a/src/app/tools/components/shiny-dex/shiny-dex.component.html
+++ b/src/app/tools/components/shiny-dex/shiny-dex.component.html
@@ -1,9 +1,7 @@
 <ng-container *ngIf="shinies$">
-  <ng-container *ngxAlias="hideItems$ | async as hideItems">
-  <app-grid appearance="minimal" *ngIf="shinies$|async as shinies" [hideInactiveItems]="!!hideItems">
+  <app-grid appearance="minimal" *ngIf="shinies$|async as shinies">
     <ng-container *ngFor="let shinyDexentry of shinies">
       <app-grid-item [pokemon]="shinyDexentry[1] | shinyDexEntryToPokemon"></app-grid-item>
     </ng-container>
   </app-grid>
-  </ng-container>
 </ng-container>
