--- a/src/app/tools/components/friend-safari-shiny-dex/friend-safari-shiny-dex.component.html
+++ b/src/app/tools/components/friend-safari-shiny-dex/friend-safari-shiny-dex.component.html
@@ -1,12 +1,10 @@
 <ng-container *ngIf="shinies$">
-  <ng-container *ngxAlias="hideItems$ | async as hideItems">
-    <app-grid appearance="minimal" class="friend-safari-grid" *ngIf="shinies$|async as shinies" [hideInactiveItems]="!!hideItems">
-      <ng-container *ngFor="let shinyDexentry of shinies">
-        <ng-container
-          *ngIf="(shinyDexentry[1] | shinyDexEntryToPokemon: {item: shinyDexentry[1].pokemon.fsObtainingMethod === 3 ? 'rare-candy' : null}) as pokemon">
-          <app-grid-item [pokemon]="pokemon"></app-grid-item>
-        </ng-container>
+  <app-grid appearance="minimal" class="friend-safari-grid" *ngIf="shinies$|async as shinies">
+    <ng-container *ngFor="let shinyDexentry of shinies">
+      <ng-container
+        *ngIf="(shinyDexentry[1] | shinyDexEntryToPokemon: {item: shinyDexentry[1].pokemon.fsObtainingMethod === 3 ? 'rare-candy' : null}) as pokemon">
+        <app-grid-item [pokemon]="pokemon"></app-grid-item>
       </ng-container>
-    </app-grid>
-  </ng-container>
+    </ng-container>
+  </app-grid>
 </ng-container>
