removed untyped forms + minor clean up

--- a/src/app/tools/breeding/breeding.component.html
+++ b/src/app/tools/breeding/breeding.component.html
@@ -7,7 +7,7 @@
       matInput
       class="poke-autocomplete-input"
       (focusin)="selectInputText($event)"
-      [formControl]="control"
+      [formControl]="searchControl"
       [matAutocomplete]="auto"
       [matAutocompleteConnectedTo]="origin">
   </label>
