replaced basic implementations of ngx-structurals

--- a/src/app/breedable/components/ball/ball.component.html
+++ b/src/app/breedable/components/ball/ball.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngxAlias="gridAppearance$ | async as gridAppearance">
+<ng-container *ngIf="gridAppearance$ | async as gridAppearance">
   <app-grid *ngIf="worksheet" [appearance]="gridAppearance">
     <ng-container *ngFor="let entry of worksheet?.data; trackBy: trackBy">
       <app-grid-item [pokemon]="entry | castBreedable"></app-grid-item>
