--- a/src/app/grid/detailed/detailed.component.html
+++ b/src/app/grid/detailed/detailed.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="pokemon && dbpokemon$">
-  <ng-container *ngxSubscribe="let dbpokemon of dbpokemon$">
+  <ng-container *ngIf="(dbpokemon$ | async)as dbpokemon">
     <div class="detailed-header dark-bg d-flex">
       <app-item category="ball" *ngIf="pokemon.ball" [slug]="pokemon.ball | slugify"></app-item>
       {{pokemon.name}}</div>
