--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -13,6 +13,9 @@
     <app-sub-navi-item [link]="['friend-safari-shiny-dex']" [text]="'Friend Safari Shiny Dex'">
       <app-item category="ball" slug="safari"></app-item>
     </app-sub-navi-item>
+    <app-sub-navi-item [link]="['ultra-wormhole-shiny-dex']" [text]="'Ultra Wormhole Shiny Dex'">
+      <app-item category="ball" slug="beast"></app-item>
+    </app-sub-navi-item>
   </ul>
 </aside>
 <div class="view-content">
